# mystic-inventory

./: .gitignore  README.md  pyproject.toml
crate/: __init__.py  cli.py  config.py  db.py  fingerprint.py  meta.py  models.py  scan.py  volumes.py
crate/web/: __init__.py  api.py  app.py  auth.py  views.py
crate/web/static/: style.css
crate/web/templates/: _tracklist.html  album.html  artists.html  base.html  coverage.html  dashboard.html  location.html  login.html  search.html
deploy/: README.md  apache-mystic.conf  mystic.service
docs/: ARCHITECTURE.md
tests/: test_identify.py  test_smoke.py  test_volumes.py  test_web.py
