[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crate"
version = "0.1.0"
description = "Inventory and browse playable music across hosts and drives"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "nthmost" }]
dependencies = [
    "mutagen>=1.47",
    "click>=8.1",
    "pyacoustid>=1.3",
    "requests>=2.31",
]

[project.optional-dependencies]
tui = ["textual>=0.60"]

[project.scripts]
crate = "crate.cli:main"

[tool.setuptools.packages.find]
include = ["crate*"]
