[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mystic-inventory"
version = "0.1.0"
description = "Inventory and browse playable music across hosts and drives"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "nthmost" }]
dependencies = [
    "mutagen>=1.47",
    "click>=8.1",
    "pyacoustid>=1.3",
    "requests>=2.31",
]

[project.optional-dependencies]
tui = ["textual>=0.60"]
web = ["flask>=3.0", "gunicorn>=21.2"]

[project.scripts]
crate = "crate.cli:main"

[tool.setuptools.packages.find]
include = ["crate*"]

[tool.setuptools.package-data]
"crate.web" = ["templates/*.html", "static/*"]
